fdo#71005 Remove odd "Workaround for automated testing"

...that got added by 62ee5e1a752033344c172ad2380a5f1e2492330a "INTEGRATION: CWS
calcshare2: #i85794# workaround for automated testing" but does not make much
sense, esp. as all our (subsequent-)checks each use a dedicated, throwaway
UserInstallation anyway.

Change-Id: I64ca47a7d7ee3c2eb2ab33eebcec5a79a7e3d0df